# lotopp

./: CMakeLists.txt  README.md
examples/garante/: CMakeLists.txt  main.cpp
examples/garante_2/: CMakeLists.txt  main.cpp
src/: Utils.cpp  cartao.cpp  combinador.cpp  utils.cpp
src/include/lotopp/: Utils.hpp  cartao.hpp  combinador.hpp  types.hpp  utils.hpp
test/: CMakeLists.txt  test_cartao.cpp  test_comb.cpp  test_combinador.cpp  test_combinador_cartao.cpp  test_ord.cpp
